<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.accolite.quizapp.activity.PlayOptionsActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/single_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player" />
        <Button
            android:id="@+id/random_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_game" />
        <Button
            android:id="@+id/challenge_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_friend" />
        <Button
            android:id="@+id/pending_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_challenge" />
    </LinearLayout>

</RelativeLayout>