<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.accolite.quizapp.MainActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            tools:context="com.accolite.loginapp.MainActivity">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/login_page" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/imageView1"
                android:background="@drawable/oval_background2"
                android:paddingBottom="@dimen/padding_bottom_1"
                android:paddingTop="@dimen/padding_top_1"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_1"
                android:layout_marginTop="15dp"
                facebook:com_facebook_login_text="@string/facebook_text" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/fbId"
                android:layout_marginTop="@dimen/margin_top_1"
                android:text="@string/google_plus_text"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_1"

                />


            <Button
                android:id="@+id/loginId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/googleId"
                android:layout_marginTop="@dimen/margin_top_1"
                android:background="@drawable/rectangle_background"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_1" />


            <Button
                android:id="@+id/registerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/loginId"
                android:layout_marginTop="@dimen/margin_top_1"
                android:adjustViewBounds="true"
                android:background="@drawable/rectangle_background"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_1" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
